set .sliders margin to auto to prevent "jumping"

--- a/css/main.css
+++ b/css/main.css
@@ -282,7 +282,7 @@ li {
 }
 
 .sliders {
-    margin: 60px auto;
+    margin: auto auto;
     max-width: 600px;
     display: none;
 }
